--- a/authorization.html
+++ b/authorization.html
@@ -6,62 +6,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Авторизация</title>
     <link rel="stylesheet" href="style/style.css">
-    
-    <!Подключение jquery v3.5.1>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- Подключение bootstrap v4.5-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
+
+    <!-- Подключение jquery v3.5.1-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+
+    <!-- Подключение poper-->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
-    <div class="header">
-        <div class="logo">
-            <img src="images/logo.png">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+                <div class="yellow">
+                    <h2>Кружок программирования</h2>
+                </div>
+            </div>
         </div>
-        <div class="name1">
-            Кружок программирования
-        </div>
-        <div class="name2">
-            искусственного интелекта
+        <div class="row">
+            <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+                <div class="white">
+                    <h2>искусственного интеллекта</h2>
+                </div>
+            </div>
         </div>
     </div>
 
+    <div class="container">
+        <form role="form" class="form-horizontal">
+            <div class="form-group row">
+                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-8">
+                    <input type="email" class="form-control" id="inputEmail">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Пароль</label>
+                <div class="col-sm-8">
+                    <input type="password" class="form-control" id="inputPassword" name="password">
+                    <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
+                </div>
+            </div>
 
-    <div class="authorization">
-        <div class="label">
-            <div id="labelEmail">E-mail</div>
-            <dib id="labelPassword">Пароль</dib>
-        </div>
-        <div class="email">
-            <input type="email" id="inputEmail" placeholder="E-mail">
-        </div>
-        <div class="password">
-            <input type="password" id="inputPass" placeholder="Введите пароль">
-            <a href="#" class="password-control">Показать пароль</a>
-        </div>
+            <div class="form-group row">
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10"><button type="button"
+                        class="btn btn-primary btn-lg btn-block">Войти</button></div>
+            </div>
 
-        <div class="login">
-            <button id="log_in">Войти</button>
-        </div>
-        <div class="registration">
-            <button id="registration">Зарегистрироваться</button>
-        </div>
-        <div class="forgotPass">
-            <a href="#" id="forgotPass">Забыли пароль?</a>
-        </div>
+            <div class="form-group row">
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10"><button type="button"
+                        class="btn btn-success btn-lg btn-block">Регистрация</button></div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10"><button type="button"
+                        class="btn btn-info btn-lg btn-block">Забыли пароль?</button></div>
+            </div>
+
+        </form>
     </div>
-    </div>
 
-    <!Скрипт показа или скрытия пароля>
     <script>
-        $('body').on('click', '.password-control', function () {
-            if ($('#inputPass').attr('type') == 'password') {
-                $(this).html('Скрыть пароль');
-                $('#inputPass').attr('type', 'text');
+        function show_hide_password(target) {
+            var input = document.getElementById('inputPassword');
+            if (input.getAttribute('type') == 'password') {
+                target.classList.add('view');
+                input.setAttribute('type', 'text');
             } else {
-                $(this).html('Показать пароль');
-                $('#inputPass').attr('type', 'password');
+                target.classList.remove('view');
+                input.setAttribute('type', 'password');
             }
             return false;
-        });
+        }
     </script>
 
 </body>
